--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,6 @@ body {
   font-family: "Nanum Pen Script";
   min-height: 100vh;
   margin: 0px;
-
-  overflow: hidden;
 }
 
 /* media query */
@@ -201,11 +199,55 @@ a {
   min-height: 100vh;
 
   margin-left: 20px;
+  z-index: 0;
+}
+
+.Question .MyHeader {
+  position: sticky;
+  top: 0;
+  align-self: flex-start;
+  background-color: #f5f3f2;
+  z-index: 1;
+}
+
+.process_bar {
+  background-color: #f5f3f2;
+
+  display: flex;
+  position: sticky;
+  top: 70px;
+  padding: 15px;
+  align-items: center;
+  align-self: flex-start;
+
+  z-index: 1;
+}
+
+.process_bar .percent {
+  font-size: 15px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #665645;
+}
+
+.process_bar .bar {
+  margin-left: 15px;
+  width: 85%;
+  background-color: #d9d9d9;
+  height: 5px;
+  border-radius: 3px;
+}
+
+.process_bar .charge_bar {
+  background-color: #665645;
+  width: 30%;
+  height: 5px;
+  border-radius: 3px;
 }
 
 /* MyCheck */
 
-.container {
+.Question .container {
   display: flex;
   margin-bottom: 20px;
   cursor: pointer;
@@ -299,6 +341,8 @@ input#checkSometimes {
   font-weight: bold;
   color: #665645;
   margin-top: 30px;
+
+  opacity: 0.3;
 }
 
 .MyQuestion .CheckList {
@@ -331,22 +375,53 @@ input#checkSometimes {
   width: 71.6px;
 }
 
-.arrow_btn_text {
+.arrow_btn {
   color: white;
   display: flex;
 }
 
-.arrow_btn_text .btn_text_left {
+.arrow_btn .btn_text_left {
   display: flex;
   justify-content: flex-start;
   width: 50%;
 }
 
-.arrow_btn_text .btn_text_right {
+.arrow_btn .btn_text_right {
   display: flex;
   justify-content: flex-end;
   width: 50%;
   align-items: center;
+}
+
+.arrow_btn .btn_text_center {
+  display: flex;
+  width: 55%;
+  justify-content: flex-end;
+  align-items: center;
+
+  font-weight: 400;
+}
+
+.icon_center {
+  margin-left: 10px;
+
+  display: flex;
+  width: 45%;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.Question .btn_wrapper {
+  display: flex;
+  justify-content: center;
+
+  padding: 10px;
+  margin-top: 50px;
+  margin-bottom: 100px;
+}
+
+.Question .MyButton_arrow_next {
+  width: 70%;
 }
 
 /* MyInput */
@@ -454,4 +529,50 @@ input#checkSometimes {
   opacity: 1;
   transform: translateY(0%);
   transition: all 1s;
+}
+
+/* DogInfo Check */
+
+.DogInfo .container {
+  display: flex;
+  width: 100%;
+  cursor: pointer;
+}
+
+.DogInfo .container input {
+  opacity: 0;
+  cursor: pointer;
+}
+
+.DogInfo .check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #efe7e0;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 12px;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14.5px;
+  font-weight: 600;
+  color: #837e70;
+
+  width: 100%;
+}
+
+.DogInfo .container input:checked ~ .check {
+  background-color: #665645;
+  color: #efe7e0;
+}
+
+.DogInfo .container:hover input ~ .check {
+  background-color: #665645;
+}
+
+.DogInfo input.check {
+  display: none;
 }
