--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Nanum Pen Script";
+  font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
   margin: 0px;
 }
