--- a/src/css/DogInfo.css
+++ b/src/css/DogInfo.css
@@ -1,62 +1,93 @@
 /* DogInfo */
 
-.DogInfo {
+.dog-info {
   display: flex;
   flex-direction: column;
 
   justify-content: space-between;
-  padding: 0px 25px;
+  padding: 0px 35px;
 
   min-height: 100vh;
 }
 
-.DogInfo .header_wrapper {
+.dog-info .header-wrapper {
   margin-bottom: 60px;
 }
 
-.DogInfo .weight_box {
-  display: flex;
-  justify-content: flex-start;
-  width: 50%;
+.dog-info .input-title {
+  width: 100%;
+  padding-left: 5px;
+  color: #766b63;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  font-weight: 600;
 }
 
-.DogInfo .weight_text {
+.dog-info .weight-box {
+  display: flex;
+  justify-content: flex-start;
+  width: 55%;
+}
+
+.dog-info .weight-box input {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.dog-info .weight-text {
   margin-top: auto;
   color: #5d524a;
-  font-weight: 300;
+  font-weight: 500;
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.DogInfo .btn_wrapper {
+.dog-info .point {
+  font-size: 20px;
+}
+
+.dog-info .input-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: flex-start;
+  height: 60vh;
+}
+
+.dog-info .btn-wrapper {
   display: flex;
   justify-content: flex-end;
   width: 100%;
   margin-bottom: 200px;
 }
 
-.DogInfo .text_center > input {
+.dog-info .text-left > input {
+  padding-left: 20px;
+}
+
+.dog-info .text-center > input {
   text-align: center;
 }
 
-.DogInfo .MyHeader + .input_box {
+.dog-info .header + .input-box {
   margin-top: 50px;
 }
 
 /* DogInfo Check */
 
-.DogInfo .container {
+.dog-info .container {
   display: flex;
   width: 100%;
   cursor: pointer;
 }
 
-.DogInfo .container input {
+.dog-info .container input {
   opacity: 0;
   cursor: pointer;
 }
 
-.DogInfo .check {
+.dog-info .check {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,15 +107,49 @@
   width: 100%;
 }
 
-.DogInfo .container input:checked ~ .check {
+.dog-info .container input:checked ~ .check {
   background-color: #665645;
   color: #efe7e0;
 }
 
-.DogInfo .container:hover input ~ .check {
+.dog-info .container:hover input ~ .check {
   background-color: #665645;
 }
 
-.DogInfo input.check {
+.dog-info input.check {
   display: none;
+}
+
+.dog-info .d-type-box {
+  width: 100%;
+  height: 35px;
+
+  background-color: #efe7e0;
+
+  color: rgba(102, 86, 69, 0.7);
+  margin-left: 10px;
+  margin-right: 10px;
+
+  border-radius: 12px;
+
+  display: flex;
+  align-items: center;
+
+  cursor: pointer;
+}
+
+.dog-info .text {
+  padding: 0px 15px;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13.5px;
+  font-weight: 700;
+  color: gray;
+
+  width: 85%;
+}
+
+.dog-info .arrow {
+  display: flex;
+  font-size: 15px;
 }
