--- a/src/css/EmailLogin.css
+++ b/src/css/EmailLogin.css
@@ -1,11 +1,11 @@
 /* EmailLogin */
 
-.EmailLogin {
+.email-login {
   padding: 50px;
   background-color: #b79e84;
 }
 
-.EmailLogin .login_img_wrapper {
+.email-login .login-img-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,7 +18,7 @@
   color: white;
 }
 
-.login_wrapper {
+.login-wrapper {
   display: flex;
   flex-direction: column;
   margin-top: 30px;
