--- a/src/css/MyHeader.css
+++ b/src/css/MyHeader.css
@@ -11,19 +11,19 @@ header > div {
   display: flex;
 }
 
-header .head_text {
+header .head-text {
   width: 50%;
   font-size: 25px;
   justify-content: center;
 }
 
-header .head_icon_left {
+header .head-icon-left {
   display: flex;
   width: 25%;
   justify-content: flex-start;
 }
 
-header .head_icon_right {
+header .head-icon-right {
   display: flex;
   width: 25%;
   justify-content: flex-end;
@@ -33,6 +33,6 @@ a {
   font-size: 20px;
 }
 
-.home_icon {
+.home-icon {
   text-decoration: none;
 }
