--- a/src/css/MyInput.css
+++ b/src/css/MyInput.css
@@ -1,5 +1,5 @@
 /* MyInput */
-.MyInput {
+.input {
   width: 100%;
   border: none;
   border-radius: 12px;
@@ -12,26 +12,9 @@
   font-weight: bold;
 }
 
-.DogInfo .input_wrapper {
+.input-box {
   display: flex;
-  flex-direction: column;
-
-  justify-content: flex-start;
-  height: 60vh;
-}
-
-.input_box {
-  display: flex;
-  padding-top: 8px;
-  padding-bottom: 5px;
+  padding-top: 3px;
+  margin-bottom: 20px;
   width: 100%;
-}
-
-.input_title {
-  width: 100%;
-  padding-left: 20px;
-  color: #766b63;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
-  font-weight: 600;
 }
