--- a/src/css/Question.css
+++ b/src/css/Question.css
@@ -1,5 +1,5 @@
 /* Question Page */
-.Question {
+.question {
   background-color: #f5f3f2;
   padding: 10px;
   border-bottom-left-radius: 50px;
@@ -10,7 +10,7 @@
   z-index: 0;
 }
 
-.Question .MyHeader {
+.question .header {
   position: sticky;
   top: 0;
   align-self: flex-start;
@@ -18,7 +18,7 @@
   z-index: 1;
 }
 
-.process_bar {
+.process-bar {
   background-color: #f5f3f2;
 
   display: flex;
@@ -31,14 +31,14 @@
   z-index: 1;
 }
 
-.process_bar .percent {
+.process-bar .percent {
   font-size: 15px;
   font-weight: 700;
   font-family: Arial, Helvetica, sans-serif;
   color: #665645;
 }
 
-.process_bar .bar {
+.process-bar .bar {
   margin-left: 15px;
   width: 85%;
   background-color: #d9d9d9;
@@ -46,7 +46,7 @@
   border-radius: 3px;
 }
 
-.process_bar .charge_bar {
+.process-bar .charge-bar {
   background-color: #665645;
   width: 0%;
   height: 5px;
