--- a/src/css/DogInfo.css
+++ b/src/css/DogInfo.css
@@ -3,25 +3,87 @@
 .dog-info {
   display: flex;
   flex-direction: column;
-
-  justify-content: space-between;
   padding: 0px 35px;
-
   min-height: 100vh;
 }
 
-.dog-info .header-wrapper {
-  margin-bottom: 60px;
+.dog-info .main {
+  display: flex;
+  flex-direction: column;
+  height: 60vh;
+  margin-top: 60px;
 }
 
-.dog-info .input-title {
+.dog-info .input-box {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+/* step1 */
+
+.dog-info .d-type-box {
+  display: flex;
+  align-items: center;
   width: 100%;
-  padding-left: 5px;
+  height: 35px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 12px;
+  cursor: pointer;
+
+  /* color: rgba(102, 86, 69, 0.7); */
+  background-color: #efe7e0;
+  color: gray;
+}
+
+.dog-info .d-type-text {
+  padding-left: 15px;
+  font-size: 13.5px;
+  font-weight: 700;
+  width: 90%;
+}
+
+/* step2 */
+
+.dog-info .input-title {
+  margin: 0px 0px 5px 5px;
   color: #766b63;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
   font-weight: 600;
 }
+
+/* step2 - check */
+
+.dog-info .check-container {
+  display: flex;
+  width: 100%;
+}
+
+.dog-info .check-box {
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  border: none;
+  border-radius: 12px;
+  width: 100%;
+  cursor: pointer;
+
+  background-color: #efe7e0;
+  font-size: 14.5px;
+  font-weight: 600;
+  color: #837e70;
+}
+
+.dog-info .check-container input:checked ~ .check-box {
+  background-color: #665645;
+  color: #efe7e0;
+}
+
+.dog-info .check-container .check-box:hover {
+  background-color: #665645;
+}
+
+/* step2 - weight box */
 
 .dog-info .weight-box {
   display: flex;
@@ -35,121 +97,21 @@
   font-weight: 300;
 }
 
+/* number 화살표 제거 */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .dog-info .weight-text {
   margin-top: auto;
+
   color: #5d524a;
   font-weight: 500;
   font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.dog-info .point {
-  font-size: 20px;
-}
-
-.dog-info .input-wrapper {
-  display: flex;
-  flex-direction: column;
-
-  justify-content: flex-start;
-  height: 60vh;
 }
 
 .dog-info .btn-wrapper {
   display: flex;
-  justify-content: flex-end;
-  width: 100%;
   margin-bottom: 200px;
-}
-
-.dog-info .text-left > input {
-  padding-left: 20px;
-}
-
-.dog-info .text-center > input {
-  text-align: center;
-}
-
-.dog-info .header + .input-box {
-  margin-top: 50px;
-}
-
-/* DogInfo Check */
-
-.dog-info .container {
-  display: flex;
-  width: 100%;
-  cursor: pointer;
-}
-
-.dog-info .container input {
-  opacity: 0;
-  cursor: pointer;
-}
-
-.dog-info .check {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  background-color: #efe7e0;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 12px;
-
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 14.5px;
-  font-weight: 600;
-  color: #837e70;
-
-  width: 100%;
-}
-
-.dog-info .container input:checked ~ .check {
-  background-color: #665645;
-  color: #efe7e0;
-}
-
-.dog-info .container:hover input ~ .check {
-  background-color: #665645;
-}
-
-.dog-info input.check {
-  display: none;
-}
-
-.dog-info .d-type-box {
-  width: 100%;
-  height: 35px;
-
-  background-color: #efe7e0;
-
-  color: rgba(102, 86, 69, 0.7);
-  margin-left: 10px;
-  margin-right: 10px;
-
-  border-radius: 12px;
-
-  display: flex;
-  align-items: center;
-
-  cursor: pointer;
-}
-
-.dog-info .text {
-  padding: 0px 15px;
-
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 13.5px;
-  font-weight: 700;
-  color: gray;
-
-  width: 85%;
-}
-
-.dog-info .arrow {
-  display: flex;
-  font-size: 15px;
 }
