--- a/src/css/MyInput.css
+++ b/src/css/MyInput.css
@@ -12,9 +12,9 @@
   font-weight: bold;
 }
 
-.input-box {
+/* .input-box {
   display: flex;
   padding-top: 3px;
   margin-bottom: 20px;
   width: 100%;
-}
+} */
