--- a/src/css/Question.css
+++ b/src/css/Question.css
@@ -1,40 +1,37 @@
 /* Question Page */
 .question {
+  min-height: 100vh;
   background-color: #f5f3f2;
   padding: 10px;
   border-bottom-left-radius: 50px;
   border-bottom-right-radius: 50px;
-  min-height: 100vh;
-
   margin-left: 20px;
   z-index: 0;
 }
 
+/* header */
 .question .header {
   position: sticky;
   top: 0;
-  align-self: flex-start;
+  /* align-self: flex-start; */
   background-color: #f5f3f2;
   z-index: 1;
 }
 
+/* process-bar */
 .process-bar {
-  background-color: #f5f3f2;
-
   display: flex;
   position: sticky;
   top: 70px;
   padding: 15px;
   align-items: center;
-  align-self: flex-start;
-
+  background-color: #f5f3f2;
   z-index: 1;
 }
 
 .process-bar .percent {
   font-size: 15px;
   font-weight: 700;
-  font-family: Arial, Helvetica, sans-serif;
   color: #665645;
 }
 
@@ -51,4 +48,32 @@
   width: 0%;
   height: 5px;
   border-radius: 3px;
+}
+
+/* next-button */
+.question .btn-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  padding: 10px;
+}
+
+.question button {
+  width: 70%;
+}
+
+.question .question-next-button {
+  display: flex;
+  justify-content: flex-end;
+  width: 55%;
+  font-weight: 400;
+}
+
+.question .question-button-arrow {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 45%;
+  margin-left: 10px;
 }
