--- a/src/css/DogInfo.css
+++ b/src/css/DogInfo.css
@@ -139,3 +139,45 @@ input[type="number"]::-webkit-inner-spin-button {
   display: flex;
   margin-bottom: 200px;
 }
+
+/* step3 */
+
+.pet-info .pet-info-box {
+  background-color: #efe7e0;
+  margin: 3px;
+  padding: 10px 20px;
+  border-radius: 8px;
+
+  color: #837E70;
+  font-size: 15px;
+  /* font-weight: 600; */
+}
+
+.pet-info .pet-info-box .pet-detail-info {
+  display: flex;
+  margin: 8px 0px;
+}
+
+.pet-info .pet-info-box .pet-image {
+  width: 100px;
+  height: 120px;
+  border-radius: 20px;
+  margin-right: 15px;
+}
+
+.pet-info .pet-info-box .pet-detail {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* height: 110px; */
+}
+
+/* check-message */
+
+.pet-info .check-message {
+  display: flex;
+  justify-content: center;
+
+  color: #efe7e0;
+  font-size: 14px;
+}
